--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,12 +1,12 @@
-<%= form_for(@customer) do |f| %>
-  <% if @customer.errors.any? %>
+<%= form_for(customer) do |f| %>
+  <% if customer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
       <ul>
-      <% @customer.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% customer.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
@@ -14,35 +14,59 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-<div class="field">
+  <div class="field">
     <%= f.label "CPF" %><br />
     <%= f.text_field :document %>
   </div>
-<div class="field">
+  <div class="field">
     <%= f.label "Telefone" %><br />
     <%= f.text_field :telephone %>
   </div>
-<div class="field">
+  <div class="field">
     <%= f.label "Celular" %><br />
     <%= f.text_field :celphone %>
   </div>
-<div class="field">
+  <div class="field">
     <%= f.label "Data de Nascimento" %><br />
     <%= f.date_select :birthdate %>
   </div>
-<div class="field">
+  <div class="field">
     <%= f.label "Sexo" %><br />
     <%= f.select :sex, ["Masculino","Feminino"] %>
   </div>
+  <fieldset>
+    <legend>
+      Endereco
+    </legend>
+    <% f.fields_for :addresses do |builder| %>
+      <p>
+      <div class="endereco" style="border: 1px solid">
+        <div class="field">
+          <%= builder.label :address %><br />
+          <%= builder.text_field :address %>
+        </div>
+        <div class="field">
+          <%= builder.label :complement %><br />
+          <%= builder.text_field :complement %>
+        </div>
+        <div class="field">
+          <%= builder.label :zipcode %><br />
+          <%= builder.text_field :zipcode %>
+        </div>
+        
+      </div>
 
-<p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+    </p>
+  <% end %>
+  </fieldset>
+  <p><%= f.label :email %><br />
+    <%= f.text_field :email %></p>
 
   <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
+    <%= f.password_field :password %></p>
 
   <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+    <%= f.password_field :password_confirmation %></p>
 
   <div class="actions">
     <%= f.submit %>
