--- a/app/views/orders/_payment_step.html.erb
+++ b/app/views/orders/_payment_step.html.erb
@@ -1,4 +1,3 @@
-
 <div id="details">
   <ul>
     <li>Cliente: <%=@big_order.customer.name%></li>
@@ -31,4 +30,4 @@
 
 <%=link_to "Mudar endereco", new_order_path(:step=>"shipping")%> <br />
 
-<%= pagseguro_form @pagseguro_order, :submit => "Efetuar pagamento!", :email => current_user.email %>
+<%= button_to "Efetuar Pagamento", orders_path %>
