--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -1,1 +1,1 @@
-<%= pagseguro_form @order, :submit => "Efetuar pagamento!", :email => @invoice.orders.last.company.email %>
+<%= pagseguro_form @order, :submit => "Efetuar pagamento!" %>
