--- a/app/views/orders/_payment_step.html.erb
+++ b/app/views/orders/_payment_step.html.erb
@@ -31,3 +31,5 @@
 <%=link_to "Mudar endereco", new_order_path(:step=>"shipping")%> <br />
 
 <%= button_to "Efetuar Pagamento", orders_path %>
+
+<%=button_to "Pagar pelo Moip", moip_checkout_path%>
