--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -48,6 +48,16 @@
         <div class="s_row_2 clearfix">
           <label class="required">
             <strong>
+              Area
+            </strong>
+          </label>
+          <%= f.text_field :area %>
+        </div>
+
+
+        <div class="s_row_2 clearfix">
+          <label class="required">
+            <strong>
               Logotipo
             </strong>
           </label>
