--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,12 +5,19 @@
 
   <div class="clear"></div>
 
-    <h2 class="s_title_1"><span class="s_main_color">Maiores</span> Descontos</h2>
+    <h2 class="s_title_1">
+      <span class="s_main_color">
+        Maiores
+      </span> Descontos 
+      <span class="see_more"> 
+        <%=link_to "ver mais", products_path(:filter => "greatest")%>
+      </span>
+    </h2> 
     <div class="clear"></div>
   <div id="category" class="grid_9">
     <div class="s_listing s_grid_view clearfix">
             <%cont = 0%>
-            <%@products.each do |product|%>
+            <%@greatest.each do |product|%>
                   <div class="s_item grid_2">
                     <%=link_to product, :class => "s_thumb" do%>
                         <%=image_tag product.image.to_s%>
@@ -82,81 +89,7 @@
     </div>
   </div>
   </div>
-<div id="bestseller_side" class="s_box grid_3">
-        <h2>Últimos Anunciados</h2>
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_10.jpg" width="38" height="38" alt="iPhone 3GS 8GB"></a>
-          <h3><a href="product.html">iPhone 3GS 8GB</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>587.50</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_9.jpg" width="38" height="38" alt="Hubo Boss Emotion"></a>
-          <h3><a href="product.html">Hubo Boss Emotion</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>2,350.00</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_8.jpg" width="38" height="38" alt="Panasonic Lumix"></a>
-          <h3><a href="product.html">Panasonic Lumix</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_7.jpg" width="38" height="38" alt="Casio Exilim Zoom"></a>
-          <h3><a href="product.html">Casio Exilim Zoom</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_6.jpg" width="38" height="38" alt="Christian Dior Amber Woman"></a>
-          <h3><a href="product.html">Christian Dior Amber Woman</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>328.99</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_5.jpg" width="38" height="38" alt="iPod Classic"></a>
-          <h3><a href="product.html">iPod Classic</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_4.jpg" width="38" height="38" alt="Sony VAIO"></a>
-          <h3><a href="product.html">Sony VAIO</a></h3>
-          <p><a href="product.html"><span class="s_old"><span class="s_currency s_before">£</span>1,175.00</span> <span class="s_secondary_color"><span class="s_currency s_before">£</span>1,057.50</span></a></p>
-          <div class="s_rating_holder clearfix"><p class="s_rating s_rating_small s_rating_5 left"><span style="width: 100%;" class="s_percent"></span></p><span class="left">&nbsp;5/5</span></div>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_3.jpg" width="38" height="38" alt="Canon Digital Ixus 200 IS"></a>
-          <h3><a href="product.html">Canon Digital Ixus 200 IS</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_2.jpg" width="38" height="38" alt="Hugo Boss Chrome"></a>
-          <h3><a href="product.html">Hugo Boss Chrome</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_1.jpg" width="38" height="38" alt="Hennesy Paradis Extra"></a>
-          <h3><a href="product.html">Hennesy Paradis Extra</a></h3>
-          <p><a href="product.html"><span class="s_old"><span class="s_currency s_before">£</span>1,175.00</span> <span class="s_secondary_color"><span class="s_currency s_before">£</span>1,057.50</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_10.jpg" width="38" height="38" alt="Elizabeth Arden Pretty"></a>
-          <h3><a href="product.html">Elizabeth Arden Pretty</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>94.00</span></a></p>
-        </div>
-
-        <div class="s_item s_size_1 clearfix">
-          <a class="s_thumb" href="product.html"><img src="/assets/dummy/pic_9.jpg" width="38" height="38" alt="Sony Cyber Shot S1000"></a>
-          <h3><a href="product.html">Sony Cyber Shot S1000</a></h3>
-          <p><a href="product.html"><span class="s_main_color"><span class="s_currency s_before">£</span>117.50</span></a></p>
-        </div>
-      </div>
+<%=render "latest_offers"%>
 
 
 </div>
