--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
 <!-- ********************** -->
 <!--      H E A D E R       -->
 <!-- ********************** -->
-<div id="header" class="grid_fluid_100">
-  <div class="container_12">
+<div id="header" class="container_12">
+  <div class="grid_12">
     <!--
     <a id="site_logo" href="index.html">Shoppica store - Premium e-Commerce Theme</a>
     -->
