--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -13,7 +13,7 @@
           <div class="s_item grid_6 company_item" style="opacity: 1; ">
             <div class="grid_3 alpha">
               <%=link_to company do%>
-                  <%=image_tag(company.image_url)%>
+                  <%=image_tag company.image_url, :width => 187, :height => 100%>
               <%end%>
             </div>
 
