--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,10 +19,17 @@
 
     <div id="listing_options">
 
+<%= form_tag products_path, method: :get do %>
+  <div class="field">
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", name: nil %>
+  </div>
+<% end %>
+
     </div>
 
     <div class="clear"></div>
-
+    
     <div class="s_listing s_grid_view clearfix">
       <%cont = 0%>
       <%@products.each do |product|%>
@@ -59,9 +66,12 @@
     </div>
 
     <div class="pagination">
+      <%=will_paginate @products%>
       <div class="links"> <b>1</b> <a href="">2</a> <a href="">&gt;</a> <a href="">&gt;|</a> </div>
       <div class="results">Showing 1 to 12 of 20 (2 Pages)</div>
     </div>
 
   </div>
+
+  <%=render "refine_search"%>
 </div>
