--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,10 +19,10 @@
 
     <div id="listing_options">
 
-<%= form_tag products_path, method: :get do %>
+<%= form_tag products_path, :method => :get do %>
   <div class="field">
     <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", name: nil %>
+    <%= submit_tag "Search", :name => :nil %>
   </div>
 <% end %>
 
