--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,8 @@
         <%end%>
       </ul>
     </div>
-
+    <div class="clearfix"></div>
+<%=render "/utils/search_box"%>
 
     <%=render "/dashboard/categories"%>
 
